tests/snapshots/snapshot_tests__snap_parse_match_expression.snap
---
source: tests/snapshot_tests.rs
expression: parse_snap(src)
---
{
  "items": [
    {
      "kind": {
        "Function": {
          "name": "describe",
          "generics": [],
          "params": [
            {
              "kind": {
                "Typed": {
                  "name": "x",
                  "ty": {
                    "kind": {
                      "Named": "Int64"
                    },
                    "span": {
                      "start": {
                        "file": "test.axon",
                        "line": 2,
                        "column": 16
                      },
                      "end": {
                        "file": "test.axon",
                        "line": 2,
                        "column": 22
                      }
                    }
                  },
                  "default": null
                }
              },
              "span": {
                "start": {
                  "file": "test.axon",
                  "line": 2,
                  "column": 13
                },
                "end": {
                  "file": "test.axon",
                  "line": 2,
                  "column": 22
                }
              }
            }
          ],
          "return_type": {
            "kind": {
              "Named": "String"
            },
            "span": {
              "start": {
                "file": "test.axon",
                "line": 2,
                "column": 24
              },
              "end": {
                "file": "test.axon",
                "line": 2,
                "column": 32
              }
            }
          },
          "body": {
            "stmts": [
              {
                "kind": {
                  "Expr": {
                    "kind": {
                      "Match": {
                        "expr": {
                          "kind": {
                            "Identifier": "x"
                          },
                          "span": {
                            "start": {
                              "file": "test.axon",
                              "line": 3,
                              "column": 11
                            },
                            "end": {
                              "file": "test.axon",
                              "line": 3,
                              "column": 14
                            }
                          }
                        },
                        "arms": [
                          {
                            "pattern": {
                              "kind": {
                                "Literal": {
                                  "Int": 0
                                }
                              },
                              "span": {
                                "start": {
                                  "file": "test.axon",
                                  "line": 4,
                                  "column": 9
                                },
                                "end": {
                                  "file": "test.axon",
                                  "line": 4,
                                  "column": 13
                                }
                              }
                            },
                            "guard": null,
                            "body": {
                              "kind": {
                                "Literal": {
                                  "String": "zero"
                                }
                              },
                              "span": {
                                "start": {
                                  "file": "test.axon",
                                  "line": 4,
                                  "column": 14
                                },
                                "end": {
                                  "file": "test.axon",
                                  "line": 4,
                                  "column": 21
                                }
                              }
                            },
                            "span": {
                              "start": {
                                "file": "test.axon",
                                "line": 4,
                                "column": 9
                              },
                              "end": {
                                "file": "test.axon",
                                "line": 4,
                                "column": 21
                              }
                            }
                          },
                          {
                            "pattern": {
                              "kind": {
                                "Literal": {
                                  "Int": 1
                                }
                              },
                              "span": {
                                "start": {
                                  "file": "test.axon",
                                  "line": 5,
                                  "column": 9
                                },
                                "end": {
                                  "file": "test.axon",
                                  "line": 5,
                                  "column": 13
                                }
                              }
                            },
                            "guard": null,
                            "body": {
                              "kind": {
                                "Literal": {
                                  "String": "one"
                                }
                              },
                              "span": {
                                "start": {
                                  "file": "test.axon",
                                  "line": 5,
                                  "column": 14
                                },
                                "end": {
                                  "file": "test.axon",
                                  "line": 5,
                                  "column": 20
                                }
                              }
                            },
                            "span": {
                              "start": {
                                "file": "test.axon",
                                "line": 5,
                                "column": 9
                              },
                              "end": {
                                "file": "test.axon",
                                "line": 5,
                                "column": 20
                              }
                            }
                          },
                          {
                            "pattern": {
                              "kind": "Wildcard",
                              "span": {
                                "start": {
                                  "file": "test.axon",
                                  "line": 6,
                                  "column": 9
                                },
                                "end": {
                                  "file": "test.axon",
                                  "line": 6,
                                  "column": 13
                                }
                              }
                            },
                            "guard": null,
                            "body": {
                              "kind": {
                                "Literal": {
                                  "String": "other"
                                }
                              },
                              "span": {
                                "start": {
                                  "file": "test.axon",
                                  "line": 6,
                                  "column": 14
                                },
                                "end": {
                                  "file": "test.axon",
                                  "line": 6,
                                  "column": 22
                                }
                              }
                            },
                            "span": {
                              "start": {
                                "file": "test.axon",
                                "line": 6,
                                "column": 9
                              },
                              "end": {
                                "file": "test.axon",
                                "line": 6,
                                "column": 22
                              }
                            }
                          }
                        ]
                      }
                    },
                    "span": {
                      "start": {
                        "file": "test.axon",
                        "line": 3,
                        "column": 5
                      },
                      "end": {
                        "file": "test.axon",
                        "line": 8,
                        "column": 2
                      }
                    }
                  }
                },
                "span": {
                  "start": {
                    "file": "test.axon",
                    "line": 3,
                    "column": 5
                  },
                  "end": {
                    "file": "test.axon",
                    "line": 8,
                    "column": 2
                  }
                }
              }
            ],
            "tail_expr": null,
            "span": {
              "start": {
                "file": "test.axon",
                "line": 2,
                "column": 31
              },
              "end": {
                "file": "test.axon",
                "line": 9,
                "column": 1
              }
            }
          },
          "span": {
            "start": {
              "file": "test.axon",
              "line": 2,
              "column": 1
            },
            "end": {
              "file": "test.axon",
              "line": 9,
              "column": 1
            }
          }
        }
      },
      "span": {
        "start": {
          "file": "test.axon",
          "line": 2,
          "column": 1
        },
        "end": {
          "file": "test.axon",
          "line": 9,
          "column": 1
        }
      },
      "visibility": "Private",
      "attributes": []
    }
  ],
  "span": {
    "start": {
      "file": "test.axon",
      "line": 2,
      "column": 1
    },
    "end": {
      "file": "test.axon",
      "line": 9,
      "column": 1
    }
  }
}
