tests/snapshots/snapshot_tests__snap_parse_model_declaration.snap
---
source: tests/snapshot_tests.rs
expression: parse_snap(src)
---
{
  "items": [
    {
      "kind": {
        "Struct": {
          "name": "Point",
          "generics": [],
          "fields": [
            {
              "name": "x",
              "ty": {
                "kind": {
                  "Named": "Float64"
                },
                "span": {
                  "start": {
                    "file": "test.axon",
                    "line": 3,
                    "column": 8
                  },
                  "end": {
                    "file": "test.axon",
                    "line": 3,
                    "column": 16
                  }
                }
              },
              "visibility": "Private",
              "span": {
                "start": {
                  "file": "test.axon",
                  "line": 3,
                  "column": 5
                },
                "end": {
                  "file": "test.axon",
                  "line": 3,
                  "column": 16
                }
              }
            },
            {
              "name": "y",
              "ty": {
                "kind": {
                  "Named": "Float64"
                },
                "span": {
                  "start": {
                    "file": "test.axon",
                    "line": 4,
                    "column": 8
                  },
                  "end": {
                    "file": "test.axon",
                    "line": 4,
                    "column": 16
                  }
                }
              },
              "visibility": "Private",
              "span": {
                "start": {
                  "file": "test.axon",
                  "line": 4,
                  "column": 5
                },
                "end": {
                  "file": "test.axon",
                  "line": 4,
                  "column": 16
                }
              }
            }
          ],
          "span": {
            "start": {
              "file": "test.axon",
              "line": 2,
              "column": 1
            },
            "end": {
              "file": "test.axon",
              "line": 6,
              "column": 1
            }
          }
        }
      },
      "span": {
        "start": {
          "file": "test.axon",
          "line": 2,
          "column": 1
        },
        "end": {
          "file": "test.axon",
          "line": 6,
          "column": 1
        }
      },
      "visibility": "Private",
      "attributes": []
    }
  ],
  "span": {
    "start": {
      "file": "test.axon",
      "line": 2,
      "column": 1
    },
    "end": {
      "file": "test.axon",
      "line": 6,
      "column": 1
    }
  }
}
